# atlantis-crs

./: .gitignore  LICENSE  README.md  Rules.md  diagram.md
new-crs-sarif/: .gitignore  DEVELOPMENT_RULES.md  README.md  pyproject.toml
new-crs-sarif/docs/: semgrep_lightweight_parser.md
new-crs-sarif/sarif_cli/: __init__.py  analyzer.py  aux_analyser.py  cli.py  joern_wrapper.py  llm_verifier.py  settings.py  spotbugs_wrapper.py
new-crs-sarif/sarif_cli/codeql/: analyze.py  bqrs.py  common.py  database.py  docker.py  queries.py  query.py  wrapper.py
new-crs-sarif/sarif_cli/config/: __init__.py  settings.py
new-crs-sarif/sarif_cli/core/: __init__.py  aux_analyser.py  cmd.py  detector.py  llm_verifier.py  writer.py
new-crs-sarif/sarif_cli/core/aux_tools/: __init__.py  docker_manager.py  sootup_analyser.py  svf_analyser.py
new-crs-sarif/sarif_cli/models/: __init__.py  vulnerability.py
new-crs-sarif/sarif_cli/prompts/: basic.txt
new-crs-sarif/sarif_cli/utils/: ossfuzz.py
new-crs-sarif/sarif_cli/wrappers/: __init__.py  bandit_wrapper.py  joern_wrapper.py  semgrep_wrapper.py
new-crs-sarif/scripts/: install_codeql.sh  install_findsecbugs.sh  install_spotbugs.sh  setup_aux.sh  test_all_languages.sh
new-crs-sarif/test-project/: Example.java  example.c
new-crs-sarif/test-project/c/: example  vulnerable.c
new-crs-sarif/test-project/cpp/: example  vulnerable.cpp
new-crs-sarif/test-project/java/: Example.java  Vulnerable.java
new-crs-sarif/test-project/javascript/: vulnerable.js
new-crs-sarif/test-project/python/: vulnerable.py
(+4 files in other folders)
